adjusts form padding to fix container shifting on submit button hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,6 +285,10 @@ figcaption h4 {
 }
 
 /* CONTACT */
+form {
+    padding-bottom: 1rem;
+}
+
 .form-control,
 .form-control:hover,
 .form-control:focus {
